fixed formatting and comments in index.js

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <title>M4 Challenge</title>
 </head>
 <body>
+    <H1>Week 4 Challenge</H1>
+    <H2>JavaScript Fundamentals: Console Finances</H2>
+    <H3>Press browser console to view financial analysis</H3>
   <script src="index.js"></script>
 </body>
 </html>
