--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <H1>Week 4 Challenge</H1>
     <H2>JavaScript Fundamentals: Console Finances</H2>
-    <H3>Press browser console to view financial analysis</H3>
+    <H3>Open browser console to view 🌟financial analysis🌟</H3>
   <script src="index.js"></script>
 </body>
 </html>
